# src/app/authentication/models/changePasswordModel.go
@@ -1,0 +1,10 @@
+package models
+
+type BFFChangePasswordRequest struct {
+	NewPassword     string `json:"newpassword" example:"Sakshi@123" validate:"required,min=8,strongPassword,max=20"`
+	ConfirmPassword string `json:"confirmpassword" example:"Sakshi@123" validate:"required,min=8,eqfield=NewPassword"`
+}
+
+type BFFChangePasswordResponse struct {
+	Message string `json:"message" example:"password updated successfully"`
+}
